--- a/app/views/postrefers.html
+++ b/app/views/postrefers.html
@@ -1,1 +1,17 @@
 <p>This is the postrefers view.</p>
+<div class="leftcountainer">
+	<ul class="nav nav-tabs">
+  		<li><a href="#linkedinConnections" data-toggle="tab">LinkedIn</a></li>
+  		<li><a href="#twitter" data-toggle="tab">Twitter</a></li>
+	</ul>
+
+	<div class="btn btn-primary" data-drag="true" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{animate:true}" ng-hide="!list1.title">{{list1.title}}</div>
+	
+	<div class="btn"></div>
+</div>
+
+<div class="rightcountairer">
+<div class="thumbnail" data-drop="true" data-jqyoui-options ng-model="list2" jqyoui-droppable style='height:50px;'>
+  <div class="btn btn-success" data-drag="false" data-jqyoui-options ng-model="list2" jqyoui-draggable ng-hide="!list2.title">{{list2.title}}</div>
+</div>
+</div>
