--- a/app/views/postrefers.html
+++ b/app/views/postrefers.html
@@ -8,6 +8,7 @@
 	<div ng-controller="PostrefersCtrl" ng-cloak>
   <div class='list1' droppable>
     <div class='btn btn-info btn-block' ng-repeat="item in list1" data-index="{{$index}}" data-reject="{{item.reject}}"   draggable>{{item.name}}</div>
+    <div class='btn btn-info btn-block' ng-repeat="item in list1" data-index="{{$index}}" data-reject="{{item.reject}}"   draggable>Tiafua</div>
   </div>
 </div>
 
