pushing to merge with main

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+  <div class="container-fixed" ng-hide="">
+        <div class="hero-unit">
+                <p>Please sign in with your LinkedIn account. How cool is that?</p>
+                <script type="in/Login"></script>
+        <div>
+	</div>
+
 </div>
